Fixed mistakes with folder icons on IE 11

--- a/src/main/webapp/resources/css/main-theme.css
+++ b/src/main/webapp/resources/css/main-theme.css
@@ -483,9 +483,12 @@ label.checkbox{
     background: #ffffff;
 }
 
-.icon-attahcment{
-    position: relative;
-    left: 30%;
+.icon-container-attachment{
+    text-align: center;
+}
+.icon-attachment{
+    display: inline-block;
+    padding: 0px!important;
 }
 
 .ui-selectonemenu-label
